# BrainAuthentication

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
AuthorityManage/: CMakeLists.txt
AuthorityManage/sql/: brainauthentication.sql
AuthorityManage/src/: authoritymanage.cpp  authoritymanage.h  managewidget.cpp  managewidget.h  managewidget.ui  operationbutton.ui  rolepremissionwidget.cpp  rolepremissionwidget.h  rolepremissionwidget.ui  rolewidget.cpp  rolewidget.h  rolewidget.ui  rptablewidget.cpp  rptablewidget.h  rptablewidget.ui  sql.cpp  sql.h  tablewidget.cpp  tablewidget.h  urtablewidget.cpp  urtablewidget.h  urtablewidget.ui  user.cpp  user.h  useraddwidget.cpp  useraddwidget.h  useraddwidget.ui  userrolewidget.cpp  userrolewidget.h  userrolewidget.ui  usertablewidget.cpp  usertablewidget.h  usertablewidget.ui  userwidget.cpp  userwidget.h  userwidget.ui
AuthorityManage/test/: CMakeLists.txt  main.cpp
BCIIA/: CMakeLists.txt
BCIMonitor/: CMakeLists.txt
BCIMonitor/Amplifier/filter/src/: filter.cpp  iirfilter.cpp  iirfilter.h
BCIMonitor/Amplifier/plugin/BPAmplifier/: CMakeLists.txt
BCIMonitor/Amplifier/plugin/BPAmplifier/res/: res.qrc
BCIMonitor/Amplifier/plugin/BPAmplifier/src/: amplifierdevice.h  bpamplifier.cpp  bpamplifier.h  bpamplifier.json  connectdialog.cpp  connectdialog.h  connectdialog.ui  connecttask.cpp  connecttask.h
BCIMonitor/Amplifier/plugin/BPAmplifier/test/: CMakeLists.txt
BCIMonitor/Amplifier/plugin/BPAmplifier/test/src/: main.cpp  testwidget.cpp  testwidget.h  testwidget.ui
BCIMonitor/Amplifier/plugin/BrainHeartEye14/test/: CMakeLists.txt  main.cpp
BCIMonitor/Amplifier/plugin/FileAmplifier/: CMakeLists.txt
BCIMonitor/Amplifier/plugin/FileAmplifier/src/: amplifierdevice.h  connectwidget.cpp  connectwidget.h  connectwidget.ui  eegdata.cpp  eegdata.h  fileamplifier.cpp  fileamplifier.h  fileamplifier.json
BCIMonitor/Amplifier/plugin/FileAmplifier/test/: CMakeLists.txt  main.cpp
BCIMonitor/Amplifier/plugin/SelfAmplifer/src/: selfamplifer.cpp  selfamplifer.h
BCIMonitor/Amplifier/plugin/SelfAmplifer/src/Communication/: tcpcommunication.cpp
BCIMonitor/Amplifier/plugin/SelfAmplifer/src/Protocols/: protocolsa.cpp  protocolsb.cpp  protocolsb.h
BCIMonitor/Amplifier/plugin/SelfAmplifer/test/: main.cpp
BCIMonitor/Amplifier/plugin/SelfAmplifier(dry)/SelfAmplifier/: CMakeLists.txt
BCIMonitor/Amplifier/plugin/SelfAmplifier(dry)/SelfAmplifier/src/: connectwidget.cpp  dataanalysis.cpp  dataanalysis.h  eegdata.cpp  eegdata.h  selfamplifier.cpp  selfamplifier.h  selfamplifier.json
BCIMonitor/Amplifier/plugin/SelfAmplifier(dry)/SelfAmplifier/test/: CMakeLists.txt
BCIMonitor/Amplifier/plugin/SelfAmplifier(dry)/SelfAmplifier1/: CMakeLists.txt
BCIMonitor/Amplifier/plugin/SelfAmplifier(dry)/SelfAmplifier1/Amplifer/: CMakeLists.txt
BCIMonitor/Amplifier/plugin/SelfAmplifier(dry)/SelfAmplifier1/src/: amplifierdevice.h  connectwidget.cpp  connectwidget.h  dataanalysis.cpp  dataanalysis.h  eegdata.cpp  encode.cpp  selfamplifier.cpp  selfamplifier.h
BCIMonitor/Amplifier/plugin/SelfAmplifier(dry)/SelfAmplifier1/test/: CMakeLists.txt  main.cpp
BCIMonitor/Amplifier/src/: amplifier.cpp  amplifier.h  amplifierdevice.h  datathread.cpp  datathread.h
BCIMonitor/DataCommunicate/: CMakeLists.txt
BCIMonitor/DataCommunicate/src/: datacommunicate.cpp  datacommunicate.h  tcpcommunicate.cpp  tcpcommunicate.h
BCIMonitor/DataCommunicate/test/: CMakeLists.txt  main.cpp
BCIMonitor/FileStorage/MAT/: CMakeLists.txt
BCIMonitor/FileStorage/MAT/src/: mat.cpp  mat.h
BCIMonitor/FileStorage/src/: filestorage.cpp  filestorage.h  matstorage.cpp  matstorage.h  storage.h
BCIMonitor/FileStorage/test/: main.cpp
BCIMonitor/curvegroup/CurveWnd/: CMakeLists.txt
BCIMonitor/curvegroup/CurveWnd/maxwidget/: CMakeLists.txt
BCIMonitor/curvegroup/CurveWnd/maxwidget/src/: qcustomplot.h
BCIMonitor/curvegroup/CurveWnd/src/: curvewnd.cpp  curvewnd.h  seriesdata.cpp  seriesdata.h
BCIMonitor/curvegroup/src/: curvegroup.cpp  curvegroup.h  datadown.cpp
BCIMonitor/mat/: CMakeLists.txt  main.cpp
BCIMonitor/mat/src/: matread.cpp
BCIMonitor/res/: res.qrc
BCIMonitor/src/: bcimonitor.cpp  bcimonitor.h  monitorconfigwidget.cpp  monitorconfigwidget.h  monitorconfigwidget.ui  monitortoolbar.cpp  monitortoolbar.h  processdata.cpp  processdata.h
BCIMonitor/test/: CMakelists.txt  main.cpp
Blink/: CMakeLists.txt
Blink/src/: blinkrecognition.cpp  blinkrecognition.h
CCA/: CMakeLists.txt
CCA/src/: cca.cpp  cca.h  cca.h.autosave
CCA/test/: CMakeLists.txt  main.cpp
Calculate/: .gitignore  calculate.py  communicate.py  (+5 more)
ControlFly/: CMakeLists.txt
ControlFly/src/: biteteethprogressbar.cpp  biteteethprogressbar.h  commandcommunication.cpp  commandcommunication.h  controlfly.cpp  controlfly.h  flycommunication.cpp  flycommunication.h  flycontrolwidget.cpp  flycontrolwidget.h  flycontrolwidget.ui  h264decoder.cpp  h264decoder.hpp  videocommunication.cpp  videocommunication.h
ControlFly/test/: CMakeLists.txt  main.cpp
CustomMessageHandler/: CMakeLists.txt
CustomMessageHandler/Log/: CMakeLists.txt
CustomMessageHandler/Log/src/: log.cpp  log.h
CustomMessageHandler/Log/test/: CMakeLists.txt  main.cpp
CustomMessageHandler/src/: custommessagehandler.cpp  custommessagehandler.h
CustomMessageHandler/test/: CMakeLists.txt  main.cpp
DataProcess/: CMakeLists.txt
DataProcess/filter/: CMakeLists.txt  arraydata.cpp  arraydata.h  filter.cpp  iirfilter.cpp  iirfilter.h
DataProcess/src/: arraydata.cpp  dataprocess.cpp  dataprocess.h
DataProcess/test/: CMakeLists.txt  main.cpp
SSVEPWidget/: CMakeLists.txt
SSVEPWidget/src/: ssvepwidget.cpp  ssvepwidget.h
SSVEPWidget/test/: CMakeLists.txt  main.cpp
ssvep/: CMakeLists.txt
ssvep/src/: communication.cpp  communication.h  receivecommandtask.cpp  receivecommandtask.h  ssvep.cpp  ssvep.h  ssvepclassify.cpp  ssvepclassify.h  ssvepconfig.cpp  ssvepconfig.h  timer.cpp  timer.h  timerevent.cpp  timerevent.h
ssvep/src/CCA/: _matrix.cpp  _matrix.h  cca.cpp  cca.h
ssvep/test/: CMakeLists.txt  main.cpp
(+110 files in other folders)
